feat: building apps with multiples solvers